<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.faishalrachman.amonsecg.DetailActivity">
    <LinearLayout
        android:id="@+id/activity_detail"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:transitionName="@string/card_transition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/item_image"
                    android:contentDescription="@string/image_condition"
                    android:src="@drawable/boy0"
                    android:layout_width="32dp"
                    android:layout_height="32dp" />
                <LinearLayout
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/item_name"
                        android:text="@string/fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/item_id"
                        android:text="@string/device_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="BPM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableLayout
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="@string/fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/friend_full_name"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="Faishal Rachman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="@string/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/friend_address"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="JL. Apakek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="My Phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/friend_phone"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="62 813 1223"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="Emergency Phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/friend_phone_emergency"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="62 813 1223"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="@string/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/friend_gender"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="Male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="@string/age" />
                    <TextView
                        android:id="@+id/friend_age"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/alert_image"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:contentDescription="@string/image_condition"
                        android:src="@drawable/ic_error_green"
                        android:layout_width="32dp"
                        android:layout_height="32dp" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/alert_title"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="Condition: Normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:visibility="gone"
                            android:id="@+id/alert_detail"
                            android:text="Nothing to worry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Start"
                    android:textColor="@color/colorAccent"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/button_sms"
                    android:contentDescription="@string/action_sms"
                    android:src="@drawable/ic_action_sms"
                    android:background="@color/colorGreyLight"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/button_call"
                    android:contentDescription="@string/action_call"
                    android:tint="#fff"
                    android:src="@drawable/ic_action_call"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"-->
            <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
            <!--app:cardCornerRadius="8dp"-->
            <!--app:cardElevation="4dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<com.robinhood.spark.SparkView xmlns:app="http://schemas.android.com/apk/res-auto"-->
                <!--android:id="@+id/graphView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="200dp"-->
                <!--app:spark_lineColor="@color/colorPrimary"/>-->
        <!--</android.support.v7.widget.CardView>-->

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/graphView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/graphView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/graphView4"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:visibility="gone"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_remove"
                android:textColor="#fff"
                android:background="@color/colorRed"
                android:text="@string/remove_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>
        <View
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
    </LinearLayout>
</ScrollView>